[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32.117, 32.0403 )

[node name="Player" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="move_tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="change_tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="stun_time" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]

[connection signal="tween_completed" from="move_tween" to="." method="_on_move_tween_tween_completed"]

[connection signal="tween_completed" from="change_tween" to="." method="_on_change_tween_tween_completed"]

[connection signal="timeout" from="stun_time" to="." method="_on_stun_time_timeout"]


